# Allergy-Tracker-CLI

./: .clang-format  .gitignore  CMakeLists.txt  food_table.db
include/: AllergyHeader.h
src/: AllergyHeader.h  CMakeLists.txt  callback.cpp  centerText.cpp  clearScreen.cpp  createFoodTable.cpp  deleteAllergyPage.cpp  deleteByName.cpp  errorCheckInt.cpp  executeSQL.cpp  main.cpp  newAllergyPage.cpp  openDB.cpp  userMenu.cpp
tests/: CMakeLists.txt  test_example.cpp
